make website width fixed && make z-index to main site

--- a/app/assets/stylesheets/pages/index.css.sass
+++ b/app/assets/stylesheets/pages/index.css.sass
@@ -1,6 +1,7 @@
 body
   background-image: url("bg.png")
   margin-top: 50px
+  overflow-x: hidden
   @media (max-width: 960px)
     margin: 0
     padding: 0
